Add inventory repeat